--- a/client/src/components/HomeMain/homeMain.css
+++ b/client/src/components/HomeMain/homeMain.css
@@ -1,6 +1,19 @@
-.post-cnt{
+.post-cnt {
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
+}
+
+
+.scrollbar-hide-comment::-webkit-scrollbar {
+        width: 5px;
+        height: 8px;
+        background-color: #314f5f6e;
+        border-radius: 10px;
+}
+
+.scrollbar-hide-comment::-webkit-scrollbar-thumb {
+        border-radius: 100px;
+        background: #0F213E;
 }
